tests/negative/neg_pr1162_removed_declare.safe
package Neg_PR1162_Removed_Declare

   function Build returns Integer

      declare
         Temp : Integer = 1;
      begin
         return Temp;
      end;
